--- a/SistemaEcommerce/index.html
+++ b/SistemaEcommerce/index.html
@@ -17,6 +17,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
     <script src="control/clienteControl.js"></script>
+    <script src="control/estudanteControl.js"></script>
 
     <div ng-include="'menu.html'"></div>
 
