--- a/SistemaEcommerce/menu.html
+++ b/SistemaEcommerce/menu.html
@@ -35,22 +35,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="cliente.html">Cliente</a>
-                        <a class="dropdown-item" href="categoria.html">Categoria</a>
-                        <a class="dropdown-item" href="produto.html">Produto</a>
-                        <a class="dropdown-item" href="pedido.html">Pedido</a>
+                        <a class="dropdown-item" href="estudante.html">Estudante</a>
+                        <a class="dropdown-item" href="livro.html">Livro</a>
+                        <a class="dropdown-item" href="autor.html">Autor</a>
                     </div>
                 </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Relatórios
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="pedido.html">Pedido</a>
-                    </div>
-                </li>
-
             </ul>
         </div>
     </nav>
